trying to resolve iphone icon alignment issue by flexbox

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -56,7 +56,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  min-height: 200px;
+  min-height: 300px;
   position: relative;
   bottom: 0;
 }
