--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 :root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -11,7 +14,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  
+  height: 100%;
   overflow:hidden; /* Prevent body from scrolling */
   overflow-x: hidden;
   box-sizing: border-box;
@@ -33,8 +36,12 @@ a:hover {
 }
 
 @supports (-webkit-touch-callout: none) {
-  .decrementButton, .incrementButton {
-    line-height: normal; /* iOS fix */
-    text-rendering: optimizeLegibility;
+  .decrementButton,
+  .incrementButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    
   }
 }
